tests/baselines/reference/unionTypeWithRecursiveSubtypeReduction2.errors.txt
tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts(19,1): error TS2322: Type 'Property' is not assignable to type 'Class'.
  Types of property 'parent' are incompatible.
    Type 'Module | Class' is not assignable to type 'Namespace'.
      Property 'members' is missing in type 'Class' but required in type 'Namespace'.
tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts(20,1): error TS2322: Type 'Class' is not assignable to type 'Property'.
  Types of property 'parent' are incompatible.
    Type 'Namespace' is not assignable to type 'Module | Class'.
      Type 'Namespace' is not assignable to type 'Module'.
        Types of property 'members' are incompatible.
          Type '(Class | Property)[]' is not assignable to type 'Class[]'.
            Type 'Class | Property' is not assignable to type 'Class'.
              Type 'Property' is not assignable to type 'Class'.


==== tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts (2 errors) ====
    class Module {
        public members: Class[];
    }
    
    class Namespace {
        public members: (Class | Property)[];
    }
    
    class Class {
        public parent: Namespace;
    }
    
    class Property {
        public parent: Module | Class;
    }
    
    var c: Class;
    var p: Property;
    c = p;
    ~
!!! error TS2322: Type '{|Property|0|}' is not assignable to type '{|Class|1|}'.
!!! error TS2322:   Types of property 'parent' are incompatible.
!!! error TS2322:     Type '{|Module|2|} | {|Class|3|}' is not assignable to type '{|Namespace|4|}'.
!!! error TS2322:       Property 'members' is missing in type '{|Class|5|}' but required in type '{|Namespace|6|}'.
!!! related TS2728 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:6:12: 'members' is declared here.
!!! annotated symbol 0 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:13:7
!!! annotated symbol 1 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 2 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 4 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:5:7
!!! annotated symbol 5 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 6 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:5:7
    p = c;
    ~
!!! error TS2322: Type '{|Class|0|}' is not assignable to type '{|Property|1|}'.
!!! error TS2322:   Types of property 'parent' are incompatible.
!!! error TS2322:     Type '{|Namespace|2|}' is not assignable to type '{|Module|3|} | {|Class|4|}'.
!!! error TS2322:       Type '{|Namespace|5|}' is not assignable to type '{|Module|6|}'.
!!! error TS2322:         Types of property 'members' are incompatible.
!!! error TS2322:           Type '({|Class|7|} | {|Property|8|})[]' is not assignable to type '{|Class|9|}[]'.
!!! error TS2322:             Type '{|Class|10|} | {|Property|11|}' is not assignable to type '{|Class|12|}'.
!!! error TS2322:               Type '{|Property|13|}' is not assignable to type '{|Class|14|}'.
!!! annotated symbol 0 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 1 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:13:7
!!! annotated symbol 2 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:5:7
!!! annotated symbol 3 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:1:7
!!! annotated symbol 4 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 5 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:5:7
!!! annotated symbol 6 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:1:7
!!! annotated symbol 7 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 8 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:13:7
!!! annotated symbol 9 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 10 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 11 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:13:7
!!! annotated symbol 12 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
!!! annotated symbol 13 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:13:7
!!! annotated symbol 14 tests/cases/compiler/unionTypeWithRecursiveSubtypeReduction2.ts:9:7
    